adicionado cv para download; ajustes na div de cursos

--- a/index.html
+++ b/index.html
@@ -15,54 +15,53 @@
 </head>
 
 <body>
-    <header class="header-bg">
-        <div class="header" id="header">
-            <div class="title-header">
-                <p class="name">DIEGO <span>MAYOLO</span></p>
-                <p class="function">FULLSTACK DEVELOPER</p>
-            </div>
-            <!-- <img src="/img/diego-mayolo-36px-white.svg" alt="Marca"> -->
-            <div>
-                <nav>
-                    <div class="nav navshow">
-                        <div class="menu">
-                            <a class="menu-item" href="#experiencia">experiencia</a>
-                            <a class="menu-item" href="#formacao">formacao</a>
-                            <a class="menu-item" href="#contato">contato</a>
-                        </div>
+    <header class="header-bg"">
+        <div class=" header" id="header">
+        <div class="title-header">
+            <p class="name">DIEGO<span>MAYOLO</span></p>
+            <p class="function">FULLSTACK DEVELOPER</p>
+        </div>
+        <div>
+            <nav>
+                <div class="nav navshow">
+                    <div class="menu">
+                        <a class="menu-item" href="#experiencia">experiencia</a>
+                        <a class="menu-item" href="#formacao">formacao</a>
+                        <a class="menu-item" href="#contato">contato</a>
                     </div>
-                </nav>
-
-                <nav class="nav-buttons">
-                    <a href="#experiencia">
-                        <button class="btn-header">
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                            <span></span> Experiência
-                        </button>
-                    </a>
-                    <a href="#formacao">
-                        <button class="btn-header">
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                            <span></span> Formação
-                        </button>
-                    </a>
-                    <a href="#contato">
-                        <button class="btn-header">
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                            <span></span> Contato
-                        </button>
-                    </a>
-                </nav>
-                <div class="button-expand">
-                    <i class="fa-solid fa-angle-down"></i>
                 </div>
+            </nav>
+
+            <nav class="nav-buttons">
+                <a href="#experiencia">
+                    <button class="btn-header">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span> Experiência
+                    </button>
+                </a>
+                <a href="#formacao">
+                    <button class="btn-header">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span> Formação
+                    </button>
+                </a>
+                <a href="#contato">
+                    <button class="btn-header">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span> Contato
+                    </button>
+                </a>
+            </nav>
+            <div class="button-expand">
+                <i class="fa-solid fa-angle-down"></i>
             </div>
+        </div>
         </div>
     </header>
 
@@ -74,17 +73,24 @@
             <p>Olá, eu sou</p>
             <h1 class="name">Diego Luis<br>Mayolo</h1>
             <div class="city">
-                <i class="fa fa-map-marker"><span>Arroio do Meio, RS 🧉</span></i></li>
+                <i class="fa fa-location-dot"><span>Arroio do Meio, RS 🧉</span></i></li>
+            </div>
+            <div>
+                <div class="button-download-container">
+                    <a href="/cv/cv-diegomayolo.pdf" download="cv-diegomayolo">
+                        <button class="button-download" style="vertical-align:middle"> Download CV</button>
+                    </a>
+                </div>
             </div>
         </div>
     </main>
 
     <section class="experiencia-container" id="experiencia" aria-label="Experiência">
-        <h2 class="subtitulo">Experiência</h2>
+        <h2 data-anime="left" class="subtitulo">Experiência</h2>
         <div class="right-side">
-            <div class="experiencia-content">
+            <div data-anime="right" class="experiencia-content">
                 <p class="texto">
-                    &nbsp&nbsp&nbsp&nbsp Sou um profissional dinâmico e adaptativo que busca sempre contribuir com o todo. Acredito muito em trabalho em equipe e em comunicação contínua, clara e objetiva.
+                    &nbsp&nbsp&nbsp&nbsp Sou um profissional dinâmico e adaptativo que busca sempre contribuir com o todo. Acredito muito no trabalho em equipe e na comunicação contínua, clara e objetiva.
                 </p>
                 <p class="texto">
                     &nbsp&nbsp&nbsp&nbsp Escolhi a área de software para atuação, pois me agrada muito o fato de ter a possibilidade de criarmos praticamente qualquer coisa e ajudar diversos setores.
@@ -109,7 +115,7 @@
     <section class="formacao" id="formacao" aria-label="Formação">
         <div data-anime="left" class="formacao-container">
             <h2 class="subtitulo">Formação</h2>
-            <div class="right-side" data-anime2="right">
+            <div class="right-side">
                 <div class="formação-content">
                     <p class="texto">
                         &nbsp&nbsp&nbsp&nbsp Possuo como formação principal, <strong>Análise e Desenvolvimento de Sistemas</strong>. Além disso, me mantenho sempre atualizado com cursos intensivos online
@@ -125,26 +131,26 @@
                         <span class="faculdade-instituicao">Unicesumar</span>
                     </li>
                 </ul>
-                <div class="formacao-extra">
-                    <div class="cursos">
-                        <h3>Cursos Intensivos</h3>
-                        <ul>
-                            <li class="hvr-icon-pulse-grow">Java POO - Udemy <span class="hvr-icon">50h</span> </li>
-                            <li class="hvr-icon-pulse-grow">HTML e CSS para iniciantes - Origamid <span class="hvr-icon">46h</span> </li>
-                            <li class="hvr-icon-pulse-grow">Javascript do básico ao avançado com Node - Udemy <span class="hvr-icon">22.5h</span> </li>
-                            <li class="hvr-icon-pulse-grow">React Completo - Origamid <span class="hvr-icon">36h</span> </li>
-                            <li class="hvr-icon-pulse-grow">Full Stack Javascript - Onebitcode <span class="hvr-icon"><i>(andamento)</i></span> </li>
-                            <li class="hvr-icon-pulse-grow">Inglês Mairo Vergara <span class="hvr-icon"><i>(andamento)</i></span> </li>
-                        </ul>
-                    </div>
-                    <div class="idiomas">
-                        <h3>Idiomas</h3>
-                        <ul>
-                            <li>Inglês <span>/ Básico</span> </li>
-                            <li>Português <span>/ Fluente</span> </li>
-                        </ul>
-                    </div>
-                </div>
+            </div>
+        </div>
+        <div data-anime="right" class="formacao-extra">
+            <div class="idiomas">
+                <h3>Idiomas</h3>
+                <ul>
+                    <li>Inglês <span>/ Básico</span> </li>
+                    <li>Português <span>/ Fluente</span> </li>
+                </ul>
+            </div>
+            <div class="cursos">
+                <h3>Cursos Intensivos</h3>
+                <ul>
+                    <li class="hvr-icon-pulse-grow">Java POO - Udemy <span class="hvr-icon">50h</span> </li>
+                    <li class="hvr-icon-pulse-grow">HTML e CSS para iniciantes - Origamid <span class="hvr-icon">46h</span> </li>
+                    <li class="hvr-icon-pulse-grow">Javascript do básico ao avançado com Node - Udemy <span class="hvr-icon">22.5h</span> </li>
+                    <li class="hvr-icon-pulse-grow">React Completo - Origamid <span class="hvr-icon">36h</span> </li>
+                    <li class="hvr-icon-pulse-grow">Full Stack Javascript - Onebitcode <span class="hvr-icon"><i>(andamento)</i></span> </li>
+                    <li class="hvr-icon-pulse-grow">Inglês Mairo Vergara <span class="hvr-icon"><i>(andamento)</i></span> </li>
+                </ul>
             </div>
         </div>
     </section>
@@ -191,9 +197,16 @@
                         </div>
 
                         <!-- send button -->
-                        <button class="btn btn-primary send-button" id="submit" type="submit" value="SEND">
-                            <div class="alt-send-button">
-                                <i class="fa fa-paper-plane"></i><span class="send-text">SEND</span>
+                        <button class="send-button">
+                            <div class="send-button-div">
+                                <span class="send-button-span" id="submit" type="submit" value="SEND">
+                                    <p class="fa send-button-p">SEND</p>
+                                </span>
+                            </div>
+                            <div class="send-button-div">
+                                <span class="send-button-span">
+                                    <p class="fa fa-paper-plane send-button-p"> Thanks</p>
+                                </span>
                             </div>
                         </button>
                     </form>
