alterada paleta de cores dos detalhes; alinhamento em textos; adicionado gif

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                     </a>
                 </div>
             </div>
+            <img class="svg-details-introdution" src="/img/task-bro.svg">
         </div>
     </main>
 
