ajustes na função de envio de email para limpar campos do furmulário e remover validacao do email

--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@
                     </div>
                 </div>
 
-                <div id="scrollme" data-anime="right" class="back-to-top">
-                    <button class="btn-back-to-top">
+                <div data-anime="right" class="back-to-top">
+                    <button id="scrollme" class="btn-back-to-top">
                         <div class="text">
                             <span>Back</span>
                             <span>to</span>
