Alterado o curso em andamento

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
             <img class="svg-details-introdution" src="/img/task-bro.svg">
         </div>
     </main>
-
-    <section class="experiencia-container" id="experiencia" aria-label="Experiência">
+    <br id="experiencia">
+    <section class="experiencia-container" aria-label="Experiência">
         <h2 data-anime="left" class="subtitulo">Experiência</h2>
         <div class="right-side">
             <div data-anime="right" class="experiencia-content">
@@ -145,12 +145,12 @@
             <div class="cursos">
                 <h3>Cursos Intensivos</h3>
                 <ul>
-                    <li class="hvr-icon-pulse-grow">Java POO - Udemy <span class="hvr-icon">50h</span> </li>
+                    <li class="hvr-icon-pulse-grow">Java POO - DevSuperior<span class="hvr-icon">50h</span> </li>
                     <li class="hvr-icon-pulse-grow">HTML e CSS para iniciantes - Origamid <span class="hvr-icon">46h</span> </li>
                     <li class="hvr-icon-pulse-grow">Javascript do básico ao avançado com Node - Udemy <span class="hvr-icon">22.5h</span> </li>
                     <li class="hvr-icon-pulse-grow">React Completo - Origamid <span class="hvr-icon">36h</span> </li>
-                    <li class="hvr-icon-pulse-grow">Full Stack Javascript - Onebitcode <span class="hvr-icon"><i>(andamento)</i></span> </li>
-                    <li class="hvr-icon-pulse-grow">Inglês Mairo Vergara <span class="hvr-icon"><i>(andamento)</i></span> </li>
+                    <li class="hvr-icon-pulse-grow">Spring Boot - DevSuperior <span class="hvr-icon"><i>(andamento)</i></span> </li>
+                    <li class="hvr-icon-pulse-grow">Inglês - Mairo Vergara <span class="hvr-icon"><i>(andamento)</i></span> </li>
                 </ul>
             </div>
         </div>
@@ -198,15 +198,10 @@
                         </div>
 
                         <!-- send button -->
-                        <button class="send-button">
+                        <button onclick="thankSend()" class="send-button">
                             <div class="send-button-div">
                                 <span class="send-button-span" id="submit" type="submit" value="SEND">
                                     <p class="fa send-button-p">SEND</p>
-                                </span>
-                            </div>
-                            <div class="send-button-div">
-                                <span class="send-button-span">
-                                    <p class="fa fa-paper-plane send-button-p"> Thanks</p>
                                 </span>
                             </div>
                         </button>
