--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <div class="cursos">
                 <h3>Cursos Intensivos</h3>
                 <ul>
-                    <li class="hvr-icon-pulse-grow">Java Programação Orientada a Objetods - DevSuperior <span class="hvr-icon">50h</span> </li>
+                    <li class="hvr-icon-pulse-grow">Java Programação Orientada a Objetos - DevSuperior <span class="hvr-icon">50h</span> </li>
                     <li class="hvr-icon-pulse-grow">Javascript do básico ao avançado com Node.js - Udemy <span class="hvr-icon">22.5h</span> </li>
                     <li class="hvr-icon-pulse-grow">HTML e CSS para iniciantes - Origamid <span class="hvr-icon">46h</span> </li>
                     <li class="hvr-icon-pulse-grow">React Completo - Origamid <span class="hvr-icon">36h</span> </li>
