fix course in progress

--- a/index.html
+++ b/index.html
@@ -145,12 +145,12 @@
             <div class="cursos">
                 <h3>Cursos Intensivos</h3>
                 <ul>
+                    <li class="hvr-icon-pulse-grow">Java Spring Professional - DevSuperior <span class="hvr-icon"><i>(andamento)</i></span> </li>
+                    <li class="hvr-icon-pulse-grow">Inglês Mairo Vergara <span class="hvr-icon"><i>(andamento)</i></span> </li>
                     <li class="hvr-icon-pulse-grow">Java POO - Udemy <span class="hvr-icon">50h</span> </li>
                     <li class="hvr-icon-pulse-grow">HTML e CSS para iniciantes - Origamid <span class="hvr-icon">46h</span> </li>
                     <li class="hvr-icon-pulse-grow">Javascript do básico ao avançado com Node - Udemy <span class="hvr-icon">22.5h</span> </li>
                     <li class="hvr-icon-pulse-grow">React Completo - Origamid <span class="hvr-icon">36h</span> </li>
-                    <li class="hvr-icon-pulse-grow">Full Stack Javascript - Onebitcode <span class="hvr-icon"><i>(andamento)</i></span> </li>
-                    <li class="hvr-icon-pulse-grow">Inglês Mairo Vergara <span class="hvr-icon"><i>(andamento)</i></span> </li>
                 </ul>
             </div>
         </div>
