update href from cv

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
             <div>
                 <div class="button-download-container">
-                    <a href="/cv/cv-diegomayolo.pdf" download="cv-diegomayolo">
+                    <a href="/cv/cv_diego_mayolo.pdf" download="cv_diego_mayolo">
                         <button class="button-download" style="vertical-align:middle"> Download CV</button>
                     </a>
                 </div>
